refactor: simplify list collection using toList() in CommandMonthlyExpenseService and MonthlyPersistenceAdapter