@@ -111,7 +111,7 @@ public class MonthlyPersistenceAdapter implements MonthlyExpenseRepositoryPort {
                 .getResultList()
                 .stream()
                 .map(monthlyExpenseMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -171,6 +171,6 @@ public class MonthlyPersistenceAdapter implements MonthlyExpenseRepositoryPort {
 
         return results.stream()
                 .map(monthlyExpenseMapper::toDomain)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 }
